[package]
name = "proxy-harvest-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "proxy_harvest_rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1.0"
base64 = "0.22"
regex = "1.5"
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
